--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.16.0",
     "eventsource-parser": "^3.0.6",
     "input-otp": "^1.4.2",
     "ky": "^1.13.0",
