--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "input-otp": "^1.4.2",
     "ky": "^1.13.0",
     "lucide-react": "^0.553.0",
-    "miaoda-auth-react": "^2.0.6",
+    "miaoda-auth-react": "2.0.6",
     "miaoda-sc-plugin": "1.0.49",
     "motion": "^12.23.25",
     "next-themes": "^0.4.6",
