--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "miaoda-react-admin",
   "version": "0.0.1",
   "type": "module",
+  "resolutions": {
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -73,8 +77,8 @@
     "@biomejs/biome": "2.3.4",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/lodash": "^4.17.20",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/video-react": "^0.15.8",
     "@typescript/native-preview": "7.0.0-dev.20251103.1",
     "@vitejs/plugin-react": "^4.3.4",
