Fix: Update CI workflow to ensure correct dependency installation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
           node-version: 20
           
       - name: Install dependencies
+        # Use npm ci if package-lock.json is present, otherwise npm install
         run: npm install
 
       - name: Build
