Update README: HTP planning and remove local dev docs

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "npx biome lint",
     "db:setup": "npm exec --yes -- supabase link --project-ref pwlgtiiiapiahtwtvojz",
     "db:push": "npm exec --yes -- supabase db push",
-    "deploy:db": "npm run db:setup && npm run db:push",
+    "deploy:db": "npm run db:push",
     "deploy:all": "powershell -ExecutionPolicy Bypass -File ./deploy_all.ps1"
   },
   "dependencies": {
