Fix deployment: explicit CNAME copy and homepage URL

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,7 @@ jobs:
           CI: false
         run: |
           npm run build
+          cp public/CNAME dist/CNAME || true
           ls -R dist
           cp dist/index.html dist/404.html
 
